data/all_generated_tests/raw_wast_tests/br_ImproperFunctionCallorReturnHandling_898.wast
;; 9. **Branch with Multiple Return Values:**    - Description: Implement a function that returns multiple values and uses a `br` instruction within a `block`. Ensure the function correctly unwinds the stack and returns all values after the branch.    - Constraint: This test checks the proper handling of multiple return values and operand stack management when using the `br` instruction.

(assert_invalid
  (module
    (func $branch_with_multiple_return_values
      (block (result i32 i32)
        (i32.const 42) (i32.const 28)
        (br 0)
      )
    )
  )
  "type mismatch"
)